src/test/deca/syntax/invalid/readFloat_variable.synt
readFloat_variable.deca:11: